--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ td, th {
 
 html {
   font-size: 10px;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 body {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -2243,7 +2243,7 @@ a {
 p a,
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: #333333;
-  border-bottom: 2px solid transparent;
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
   -webkit-transition: all ease-in-out 200ms;
   transition: all ease-in-out 200ms; }
   p a:hover,
@@ -3122,7 +3122,7 @@ body.content-sidebar-wrap-disable-padding .content-sidebar-wrap {
   text-shadow: 0 0 3px #000000, 1px 1px 1px rgba(0, 0, 0, 0.4), 0 0 3px #000000, 2px 2px 1px rgba(0, 0, 0, 0.4); }
   .site-footer a {
     color: #FFFFFF;
-    border-bottom: 2px solid transparent;
+    border-bottom: 2px solid rgba(0, 0, 0, 0);
     -webkit-transition: all ease-in-out 200ms;
     transition: all ease-in-out 200ms; }
     .site-footer a:hover {
@@ -3436,7 +3436,7 @@ body.content-sidebar-wrap-disable-padding .content-sidebar-wrap {
       text-align: center; }
     .entry-wrapper .right-info .location a {
       color: inherit;
-      border-bottom: 2px solid transparent;
+      border-bottom: 2px solid rgba(0, 0, 0, 0);
       -webkit-transition: all ease-in-out 200ms;
       transition: all ease-in-out 200ms; }
       .entry-wrapper .right-info .location a:hover {
@@ -3863,14 +3863,14 @@ ul.rehearsal-announcements {
         border: 0; } }
 
 .masonry-6col-grid .masonry-6col-grid-sizer, .masonry-6col-grid .masonry-block {
-  width: 13.66667%; }
+  width: 13.6666666667%; }
 .masonry-6col-grid .masonry-6col-gutter-sizer {
   width: 3%; }
   @media (max-width: 980px) {
     .masonry-6col-grid .masonry-6col-gutter-sizer {
       width: 0%; } }
 .masonry-6col-grid .masonry-block-size--one-third {
-  width: 30.33333%; }
+  width: 30.3333333333%; }
   @media (max-width: 1700px) {
     .masonry-6col-grid .masonry-block-size--one-third {
       width: 47%; } }
@@ -3889,7 +3889,7 @@ ul.rehearsal-announcements {
     .masonry-6col-grid .masonry-block-size--one-half {
       width: 100%; } }
 .masonry-6col-grid .masonry-block-size--two-thirds {
-  width: 63.66667%; }
+  width: 63.6666666667%; }
   @media (max-width: 1200px) {
     .masonry-6col-grid .masonry-block-size--two-thirds {
       width: 97%; } }
@@ -4203,21 +4203,23 @@ nav.section-menu {
   border: 2px solid #111111 !important; }
 
 .envira-album-title {
-  padding: 0 20px !important;
-  position: relative !important;
+  position: absolute !important;
+  top: auto;
+  bottom: 0;
   margin: 0 !important;
-  height: 60px !important;
-  margin-top: -60px !important;
+  padding: 30px !important;
+  width: 100% !important;
+  font-size: 1.25em !important;
+  line-height: 1.2 !important;
   color: #FFFFFF;
-  font-size: 1.55em !important;
   font-weight: 700;
   font-family: "Roboto", "Arial", sans-serif !important;
-  text-shadow: 0 0 8px #000000, 0 0 2px #000000, 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 3px rgba(0, 0, 0, 0.4) !important; }
-  @media (max-width: 980px) {
+  text-shadow: 0 0 8px #000000, 0 0 2px #000000, 1px 1px 2px rgba(0, 0, 0, 0.5), 2px 2px 3px rgba(0, 0, 0, 0.4) !important;
+  pointer-events: none; }
+  @media (max-width: 1200px) {
     .envira-album-title {
       font-size: 1.2em !important;
-      height: 70px !important;
-      margin-top: -70px !important; } }
+      padding: 20px !important; } }
 
 .envirabox-skin {
   padding: 10px !important;
